[package]
name = "aurelius"
version = "0.7.3"
authors = ["Andy Russell <arussell123@gmail.com>"]
documentation = "https://euclio.github.io/aurelius"
homepage = "https://github.com/euclio/aurelius"
keywords = ["markdown", "vim"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/euclio/aurelius"
description = "A complete solution for previewing markdown."
edition = "2021"

[dependencies]
anyhow = "1.0.56"
async-tungstenite = { version = "0.17.1", features = ["tokio-runtime"] }
env_logger = "0.9.0"
futures = "0.3.18"
futures-util = "0.3.18"
handlebars = "3.1.0"
hyper = { version = "0.14.15", features = ["server", "tcp", "http1"] }
hyper-staticfile = "0.8.0"
include_dir = "0.7.2"
log = "0.4.14"
mime_guess = "2.0.1"
pulldown-cmark = { version = "0.7.2", default-features = false }
serde = { version = "1.0.104", features = ["derive"] }
tokio = { version = "1.14.0", features = ["rt", "macros", "io-util", "process"] }
tokio-util = { version = "0.6.9", features = ["compat"] }
url = { version = "2.1.0", features = ["serde"] }

[dev-dependencies]
matches = "0.1.8"
reqwest = { version = "0.11.7" }
tempfile = "3.1.0"
tokio = { version = "1.14.0", features = ["rt", "macros", "net"] }
tokio-test = "0.4.2"
