[package]
name = "aurelius"
version = "0.7.5"
authors = ["Andy Russell <arussell123@gmail.com>"]
documentation = "https://euclio.github.io/aurelius"
homepage = "https://github.com/euclio/aurelius"
keywords = ["markdown", "vim"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/euclio/aurelius"
description = "A complete solution for previewing markdown."
edition = "2021"

[dependencies]
axum = { version = "0.5.9", default-features = false, features = ["headers", "http1", "ws"] }
futures = "0.3.18"
futures-util = "0.3.18"
handlebars = "3.1.0"
include_dir = "0.7.2"
mime_guess = "2.0.1"
pulldown-cmark = { version = "0.9.1", default-features = false }
serde = { version = "1.0.104", features = ["derive"] }
tokio = { version = "1.14.0", features = ["rt", "macros", "io-util", "process"] }
tokio-util = { version = "0.7.3", features = ["compat", "io"] }
tower = "0.4.13"
tower-http = { version = "0.3.4", features = ["fs", "trace"] }
tracing = { version = "0.1.35", features = ["log"] }

[dev-dependencies]
anyhow = "1.0.56"
async-tungstenite = { version = "0.17.1", features = ["tokio-runtime"] }
matches = "0.1.8"
reqwest = { version = "0.11.7" }
tempfile = "3.1.0"
tokio = { version = "1.14.0", features = ["rt", "macros", "net"] }
tokio-test = "0.4.2"
